# ecommerce-react-django

./: .gitignore  pyproject.toml
backend/: db.sqlite3  productos.json
backend/backend/: settings.py  urls.py
backend/products/: api.py  jwt_decorators.py  models.py  schemas.py  urls.py  utilities.py  views.py
backend/products/migrations/: 0001_initial.py  0002_rename_img_product_products_img_producto.py  0003_remove_products_img_producto.py  0004_products_img_products.py  0005_contacts.py  0006_alter_contacts_email.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: ProductDetailAPI.js  ProductsAPI.js  api.js  auth.js  contactApi.js
frontend/src/components/: Cart.jsx  CategorySection.jsx  ContactForm.jsx  Header.jsx  Layout.jsx  Logout.jsx  NotFoundPage.jsx  ProductDetail.jsx  ProtectedRoute.jsx  ProtectedRoutes.jsx
frontend/src/context/: AuthContext.jsx  cartContext.jsx
frontend/src/pages/: CartPage.jsx  HomePage.jsx  Login.jsx  Register.jsx  productsPage.jsx
frontend/src/schemas/: authSchema.js
